--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.2.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@headlessui/react": "^1.6.5",
     "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
@@ -11,9 +14,11 @@
     "axios": "^0.27.2",
     "daisyui": "^2.17.0",
     "formik": "^2.2.9",
+    "framer-motion": "^6.4.3",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-easy-crop": "^4.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
