--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.27.2",
     "daisyui": "^2.17.0",
     "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
